完成了行年等算法

--- a/project/client/src/app/pages/customers/modify.html
+++ b/project/client/src/app/pages/customers/modify.html
@@ -10,7 +10,7 @@
 
             <div class="form-group">
                 <label>性别</label>
-                <ui-select ng-model="vm.selectedGender" class="btn-group bootstrap-select form-control">
+                <ui-select ng-model="vm.genderSelected" class="btn-group bootstrap-select form-control">
                     <ui-select-match>
                         <span> {{$select.selected.title}}</span>
                     </ui-select-match>
