--- a/project/client/src/app/pages/customers/index.html
+++ b/project/client/src/app/pages/customers/index.html
@@ -36,12 +36,12 @@
         <th>八字</th>
         <th>出生日期</th>
         <th></th>
-        <th></th>
-        <th></th>
+        <!--<th></th>-->
+        <!--<th></th>-->
       </tr>
       </thead>
       <tbody>
-      <tr ng-repeat="item in vm.customers">
+      <tr ng-repeat="item in vm.customers ">
 
         <td>{{ $index+1 }}</td>
         <td>
@@ -59,13 +59,13 @@
           {{ item.birth }}
         </td>
 
-        <td>
-          {{ item.description }}
-        </td>
+        <!--<td>-->
+          <!--{{ item.description }}-->
+        <!--</td>-->
 
-        <td>
-          {{ item.label }}
-        </td>
+        <!--<td>-->
+          <!--{{ item.label }}-->
+        <!--</td>-->
 
         <td>
 
