--- a/project/client/src/app/pages/customers/index.html
+++ b/project/client/src/app/pages/customers/index.html
@@ -74,11 +74,11 @@
             <i class="fa fa-edit"></i>
             修改
           </button>
-          <button type="button" ng-click="vm.study(item)"
-                  class="btn-sm btn-info btn-with-icon">
-            <i class="fa fa-edit"></i>
-            学习
-          </button>
+          <!--<button type="button" ng-click="vm.study(item)"-->
+                  <!--class="btn-sm btn-info btn-with-icon">-->
+            <!--<i class="fa fa-edit"></i>-->
+            <!--学习-->
+          <!--</button>-->
           <button type="button" ng-click="vm.destroy(item)"
                   class="btn-sm btn-danger btn-with-icon">
             <i class="fa fa-trash-o"></i>
