--- a/project/client/src/app/pages/customers/index.html
+++ b/project/client/src/app/pages/customers/index.html
@@ -36,8 +36,8 @@
         <th>八字</th>
         <th>出生日期</th>
         <th></th>
-        <!--<th></th>-->
-        <!--<th></th>-->
+        <th></th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -59,13 +59,13 @@
           {{ item.birth }}
         </td>
 
-        <!--<td>-->
-          <!--{{ item.description }}-->
-        <!--</td>-->
+        <td>
+          {{ item.description }}
+        </td>
 
-        <!--<td>-->
-          <!--{{ item.label }}-->
-        <!--</td>-->
+        <td>
+          {{ item.label }}
+        </td>
 
         <td>
 
